# awil_bazari

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  compose.yml  config.py  database.py  hello.py  multistage.Dockerfile  my_keyboards.py  pyproject.toml  run_backend.sh
alembic/: env.py
alembic/versions/: 4d964edbb557_volume_kind.py  e3b2e5131373_init_migrations.py
dao/: base.py
src/backend/: Dockerfile  compose.yml  multistage.Dockerfile  pyproject.toml
