[tool.poetry]
name = "awıl-bazarı"
version = "0.1.0"
description = ""
authors = ["Hamid Bikmetle <bikmetle@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {extras = ["full"], version = "^3.4.1"}
sqlalchemy = {extras = ["full"], version = "^2.0.29"}
pre-commit = "^3.7.0"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ["py311"]


[tool.ruff]
select = ["E", "F"]
ignore = ["E501", "E741"]
